--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="id">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +7,6 @@
   <link rel="shortcut icon" href="Asset/Images/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="Css/style.css" />
 </head>
-
 <body>
   <div class="header">
     <h1>CatSwimming Portofolio</h1>
@@ -19,14 +17,14 @@
       <div class="promo-text">
         <span class="promo-subtitle">MINECRAFT MODEL MAKER</span>
         <h2>CatSwimming</h2>
-        <p>Hello Everyone, im 3D modelers and animations.</p>
+        <p>Hello Everyone, I'm a 3D modeler and animator.</p>
         <div class="promo-buttons">
           <a href="#category-selector" class="btn btn-primary">Browse Models</a>
           <a href="#community" class="btn btn-outline">Contact Me</a>
         </div>
       </div>
       <div class="promo-image">
-        <img src="Asset/Images/icon.png" alt="Promo Illustration of Minecraft 3D model" />
+        <img src="Asset/Images/icon.png" alt="Promo Illustration" />
       </div>
     </div>
   </div>
@@ -66,13 +64,15 @@
     </div>
   </section>
 
+  <!-- Projects Section -->
   <section id="projects" class="projects-section">
+    <!-- MOBS -->
     <div class="slider-section category-content" data-category="mobs">
       <div class="slider-wrapper-container">
         <div class="slider-outer">
           <div class="slider-wrapper" id="slider-wrapper-mobs">
             <div class="card-slider"
-              data-description="A wandering freelance Trekker carrying her bedding and  three katana.For some reason, she sees herself as a &quot;blade,&quot;  and is constantly sharpening herself in search of her &quot;wielder&quot;.">
+              data-description="A wandering freelance Trekker carrying her bedding and three katana. For some reason, she sees herself as a 'blade,' and is constantly sharpening herself in search of her 'wielder.'">
               <div class="model-wrapper">
                 <img src="Asset/Images/padoru.gif" class="model-image" alt="Padoru">
               </div>
@@ -83,62 +83,30 @@
               </div>
             </div>
             <div class="card-slider"
-              data-description="A wandering freelance Trekker carrying her bedding and  three katana.For some reason, she sees herself as a &quot;blade,&quot;  and is constantly sharpening herself in search of her &quot;wielder&quot;.">
+              data-description="Same model, different pose.">
               <div class="model-wrapper">
-                <img src="Asset/Images/padoru.gif" class="model-image" alt="Padoru">
+                <img src="Asset/Images/padoru.gif" class="model-image" alt="Padoru 2">
               </div>
               <div class="card-content">
-                <h3>Padoru</h3>
-                <div class="duration">3D Model</div>
-                <a href="#" class="btn">VIEW MORE</a>
-              </div>
-            </div>
-            <div class="card-slider"
-              data-description="A wandering freelance Trekker carrying her bedding and  three katana.For some reason, she sees herself as a &quot;blade,&quot;  and is constantly sharpening herself in search of her &quot;wielder&quot;.">
-              <div class="model-wrapper">
-                <img src="Asset/Images/padoru.gif" class="model-image" alt="Padoru">
-              </div>
-              <div class="card-content">
-                <h3>Padoru</h3>
+                <h3>Padoru (Alt)</h3>
                 <div class="duration">3D Model</div>
                 <a href="#" class="btn">VIEW MORE</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="nav-button nav-left" id="prev-mobs"></div>
-        <div class="nav-button nav-right" id="next-mobs"></div>
+        <button class="nav-button nav-left" id="prev-mobs"></button>
+        <button class="nav-button nav-right" id="next-mobs"></button>
       </div>
     </div>
 
+    <!-- ARMOR -->
     <div class="slider-section category-content" data-category="armor">
       <div class="slider-wrapper-container">
         <div class="slider-outer">
           <div class="slider-wrapper" id="slider-wrapper-armor">
             <div class="card-slider"
-              data-description="A wandering freelance Trekker carrying her bedding and  three katana.For some reason, she sees herself as a &quot;blade,&quot;  and is constantly sharpening herself in search of her &quot;wielder&quot;.">
-              <div class="model-wrapper">
-                <img src="Asset/Images/Armor.png" class="model-image" alt="Arthur Armor">
-              </div>
-              <div class="card-content">
-                <h3>Arthur Armor</h3>
-                <div class="duration">3D Model</div>
-                <a href="#" class="btn">VIEW MORE</a>
-              </div>
-            </div>
-            <div class="card-slider"
-              data-description="A wandering freelance Trekker carrying her bedding and  three katana.For some reason, she sees herself as a &quot;blade,&quot;  and is constantly sharpening herself in search of her &quot;wielder&quot;.">
-              <div class="model-wrapper">
-                <img src="Asset/Images/Armor.png" class="model-image" alt="Arthur Armor">
-              </div>
-              <div class="card-content">
-                <h3>Arthur Armor</h3>
-                <div class="duration">3D Model</div>
-                <a href="#" class="btn">VIEW MORE</a>
-              </div>
-            </div>
-            <div class="card-slider"
-              data-description="A wandering freelance Trekker carrying her bedding and  three katana.For some reason, she sees herself as a &quot;blade,&quot;  and is constantly sharpening herself in search of her &quot;wielder&quot;.">
+              data-description="Arthur Armor set – inspired by medieval knights with fantasy flair.">
               <div class="model-wrapper">
                 <img src="Asset/Images/Armor.png" class="model-image" alt="Arthur Armor">
               </div>
@@ -150,39 +118,18 @@
             </div>
           </div>
         </div>
-        <div class="nav-button nav-left" id="prev-armor"></div>
-        <div class="nav-button nav-right" id="next-armor"></div>
+        <button class="nav-button nav-left" id="prev-armor"></button>
+        <button class="nav-button nav-right" id="next-armor"></button>
       </div>
     </div>
 
+    <!-- WEAPON -->
     <div class="slider-section category-content" data-category="weapon">
       <div class="slider-wrapper-container">
         <div class="slider-outer">
           <div class="slider-wrapper" id="slider-wrapper-weapons">
             <div class="card-slider"
-              data-description="A wandering freelance Trekker carrying her bedding and  three katana.For some reason, she sees herself as a &quot;blade,&quot;  and is constantly sharpening herself in search of her &quot;wielder&quot;.">
-              <div class="model-wrapper">
-                <img src="Asset/Images/gctk.png" class="model-image" alt="Katana">
-              </div>
-              <div class="card-content">
-                <h3>Katana</h3>
-                <div class="duration">3D Model</div>
-                <a href="#" class="btn">VIEW MORE</a>
-              </div>
-            </div>
-            <div class="card-slider"
-              data-description="A wandering freelance Trekker carrying her bedding and  three katana.For some reason, she sees herself as a &quot;blade,&quot;  and is constantly sharpening herself in search of her &quot;wielder&quot;.">
-              <div class="model-wrapper">
-                <img src="Asset/Images/gctk.png" class="model-image" alt="Katana">
-              </div>
-              <div class="card-content">
-                <h3>Katana</h3>
-                <div class="duration">3D Model</div>
-                <a href="#" class="btn">VIEW MORE</a>
-              </div>
-            </div>
-            <div class="card-slider"
-              data-description="A wandering freelance Trekker carrying her bedding and  three katana.For some reason, she sees herself as a &quot;blade,&quot;  and is constantly sharpening herself in search of her &quot;wielder&quot;.">
+              data-description="Hand-drawn katana with glowing sheath. Perfect for custom addons.">
               <div class="model-wrapper">
                 <img src="Asset/Images/gctk.png" class="model-image" alt="Katana">
               </div>
@@ -194,39 +141,18 @@
             </div>
           </div>
         </div>
-        <div class="nav-button nav-left" id="prev-weapons"></div>
-        <div class="nav-button nav-right" id="next-weapons"></div>
+        <button class="nav-button nav-left" id="prev-weapons"></button>
+        <button class="nav-button nav-right" id="next-weapons"></button>
       </div>
     </div>
 
+    <!-- EFFECTS -->
     <div class="slider-section category-content" data-category="efek">
       <div class="slider-wrapper-container">
         <div class="slider-outer">
           <div class="slider-wrapper" id="slider-wrapper-effects">
             <div class="card-slider"
-              data-description="A wandering freelance Trekker carrying her bedding and  three katana.For some reason, she sees herself as a &quot;blade,&quot;  and is constantly sharpening herself in search of her &quot;wielder&quot;.">
-              <div class="model-wrapper">
-                <img src="Asset/Images/vfx icon.gif" class="model-image" alt="Kanjut">
-              </div>
-              <div class="card-content">
-                <h3>Kanjut</h3>
-                <div class="duration">Particle Effect</div>
-                <a href="#" class="btn">VIEW MORE</a>
-              </div>
-            </div>
-            <div class="card-slider"
-              data-description="A wandering freelance Trekker carrying her bedding and  three katana.For some reason, she sees herself as a &quot;blade,&quot;  and is constantly sharpening herself in search of her &quot;wielder&quot;.">
-              <div class="model-wrapper">
-                <img src="Asset/Images/vfx icon.gif" class="model-image" alt="Kanjut">
-              </div>
-              <div class="card-content">
-                <h3>Kanjut</h3>
-                <div class="duration">Particle Effect</div>
-                <a href="#" class="btn">VIEW MORE</a>
-              </div>
-            </div>
-            <div class="card-slider"
-              data-description="A wandering freelance Trekker carrying her bedding and  three katana.For some reason, she sees herself as a &quot;blade,&quot;  and is constantly sharpening herself in search of her &quot;wielder&quot;.">
+              data-description="Particle effect named 'Kanjut' – red spark trail for custom abilities.">
               <div class="model-wrapper">
                 <img src="Asset/Images/vfx icon.gif" class="model-image" alt="Kanjut">
               </div>
@@ -238,11 +164,12 @@
             </div>
           </div>
         </div>
-        <div class="nav-button nav-left" id="prev-effects"></div>
-        <div class="nav-button nav-right" id="next-effects"></div>
+        <button class="nav-button nav-left" id="prev-effects"></button>
+        <button class="nav-button nav-right" id="next-effects"></button>
       </div>
     </div>
 
+    <!-- Modal -->
     <div id="modelModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
@@ -251,17 +178,17 @@
             <img id="modalModelImage" src="" alt="Model Image">
           </div>
           <div class="model-description-container">
-            <h3 id="modalModelName">Nama Model</h3>
+            <h3 id="modalModelName">Model Name</h3>
             <div class="modal-meta" id="modalModelType">3D Model</div>
             <div class="modal-divider"></div>
-            <p id="modalModelDescription"></p>
-
+            <p id="modalModelDescription">Description here.</p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
+  <!-- Contact Section -->
   <section id="community" class="community-section">
     <div class="community-content">
       <div class="community-image">
@@ -274,26 +201,26 @@
           profile. Let's bring your Minecraft ideas to life together!
         </p>
         <div class="community-buttons">
-          <a href="" class="btn btn-primary">Contact Me</a>
-          <a href="https://www.fiverr.com/catswimming" class="btn btn-outline">Fiverr Profile</a>
+          <a href="mailto:you@example.com" class="btn btn-primary">Contact Me</a>
+          <a href="https://www.fiverr.com/catswimming" target="_blank" class="btn btn-outline">Fiverr Profile</a>
         </div>
       </div>
     </div>
   </section>
 
+  <!-- Footer -->
   <footer class="footer">
     <div class="footer-content">
       <p>© 2026 CatSwimming. All rights reserved.</p>
       <div class="footer-links">
-        <a href="https://www.artstation.com/samirbisnis9">ArtStation</a>
-        <a href="https://www.fiverr.com/catswimming">Fiverr</a>
-        <a href="#">Email</a>
+        <a href="https://www.artstation.com/samirbisnis9" target="_blank">ArtStation</a>
+        <a href="https://www.fiverr.com/catswimming" target="_blank">Fiverr</a>
+        <a href="mailto:you@example.com">Email</a>
       </div>
-      <p class="footer-note">this website made by mrsabertrinity</p>
+      <p class="footer-note">This website made by mrsabertrinity</p>
     </div>
   </footer>
 
   <script src="Js/script.js"></script>
 </body>
-
 </html>
