--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <p>
       Need a unique weapon, a mythical creature, stylish furniture, or a custom block? I design and create original 3D
       models tailored specifically for Minecraft—crafted with precision, optimized for performance, and built to match
-      your vision. Let’s turn your concept into a model that fits perfectly into your world.
+      your vision. Let's turn your concept into a model that fits perfectly into your world.
     </p>
   </section>
 
@@ -64,13 +64,12 @@
     </div>
   </section>
 
-  <!-- Projects Section -->
   <section id="projects" class="projects-section">
-    <!-- MOBS -->
     <div class="slider-section category-content" data-category="mobs">
       <div class="slider-wrapper-container">
         <div class="slider-outer">
           <div class="slider-wrapper" id="slider-wrapper-mobs">
+            
             <div class="card-slider"
               data-description="A wandering freelance Trekker carrying her bedding and three katana. For some reason, she sees herself as a 'blade,' and is constantly sharpening herself in search of her 'wielder.'">
               <div class="model-wrapper">
@@ -82,17 +81,31 @@
                 <a href="#" class="btn">VIEW MORE</a>
               </div>
             </div>
+
             <div class="card-slider"
-              data-description="Same model, different pose.">
+              data-description="A wandering freelance Trekker carrying her bedding and three katana. For some reason, she sees herself as a 'blade,' and is constantly sharpening herself in search of her 'wielder.'">
               <div class="model-wrapper">
-                <img src="Asset/Images/padoru.gif" class="model-image" alt="Padoru 2">
+                <img src="Asset/Images/padoru.gif" class="model-image" alt="Padoru">
               </div>
               <div class="card-content">
-                <h3>Padoru (Alt)</h3>
+                <h3>Padoru</h3>
                 <div class="duration">3D Model</div>
                 <a href="#" class="btn">VIEW MORE</a>
               </div>
             </div>
+
+            <div class="card-slider"
+              data-description="A wandering freelance Trekker carrying her bedding and three katana. For some reason, she sees herself as a 'blade,' and is constantly sharpening herself in search of her 'wielder.'">
+              <div class="model-wrapper">
+                <img src="Asset/Images/padoru.gif" class="model-image" alt="Padoru">
+              </div>
+              <div class="card-content">
+                <h3>Padoru</h3>
+                <div class="duration">3D Model</div>
+                <a href="#" class="btn">VIEW MORE</a>
+              </div>
+            </div>
+
           </div>
         </div>
         <button class="nav-button nav-left" id="prev-mobs"></button>
@@ -100,13 +113,13 @@
       </div>
     </div>
 
-    <!-- ARMOR -->
     <div class="slider-section category-content" data-category="armor">
       <div class="slider-wrapper-container">
         <div class="slider-outer">
           <div class="slider-wrapper" id="slider-wrapper-armor">
+
             <div class="card-slider"
-              data-description="Arthur Armor set – inspired by medieval knights with fantasy flair.">
+               data-description="A wandering freelance Trekker carrying her bedding and three katana. For some reason, she sees herself as a 'blade,' and is constantly sharpening herself in search of her 'wielder.'">
               <div class="model-wrapper">
                 <img src="Asset/Images/Armor.png" class="model-image" alt="Arthur Armor">
               </div>
@@ -116,6 +129,31 @@
                 <a href="#" class="btn">VIEW MORE</a>
               </div>
             </div>
+
+            <div class="card-slider"
+               data-description="A wandering freelance Trekker carrying her bedding and three katana. For some reason, she sees herself as a 'blade,' and is constantly sharpening herself in search of her 'wielder.'">
+              <div class="model-wrapper">
+                <img src="Asset/Images/Armor.png" class="model-image" alt="Arthur Armor">
+              </div>
+              <div class="card-content">
+                <h3>Arthur Armor</h3>
+                <div class="duration">3D Model</div>
+                <a href="#" class="btn">VIEW MORE</a>
+              </div>
+            </div>
+
+            <div class="card-slider"
+               data-description="A wandering freelance Trekker carrying her bedding and three katana. For some reason, she sees herself as a 'blade,' and is constantly sharpening herself in search of her 'wielder.'">
+              <div class="model-wrapper">
+                <img src="Asset/Images/Armor.png" class="model-image" alt="Arthur Armor">
+              </div>
+              <div class="card-content">
+                <h3>Arthur Armor</h3>
+                <div class="duration">3D Model</div>
+                <a href="#" class="btn">VIEW MORE</a>
+              </div>
+            </div>
+
           </div>
         </div>
         <button class="nav-button nav-left" id="prev-armor"></button>
@@ -123,13 +161,13 @@
       </div>
     </div>
 
-    <!-- WEAPON -->
     <div class="slider-section category-content" data-category="weapon">
       <div class="slider-wrapper-container">
         <div class="slider-outer">
           <div class="slider-wrapper" id="slider-wrapper-weapons">
+
             <div class="card-slider"
-              data-description="Hand-drawn katana with glowing sheath. Perfect for custom addons.">
+               data-description="A wandering freelance Trekker carrying her bedding and three katana. For some reason, she sees herself as a 'blade,' and is constantly sharpening herself in search of her 'wielder.'">  
               <div class="model-wrapper">
                 <img src="Asset/Images/gctk.png" class="model-image" alt="Katana">
               </div>
@@ -139,6 +177,31 @@
                 <a href="#" class="btn">VIEW MORE</a>
               </div>
             </div>
+
+            <div class="card-slider"
+               data-description="A wandering freelance Trekker carrying her bedding and three katana. For some reason, she sees herself as a 'blade,' and is constantly sharpening herself in search of her 'wielder.'">  
+              <div class="model-wrapper">
+                <img src="Asset/Images/gctk.png" class="model-image" alt="Katana">
+              </div>
+              <div class="card-content">
+                <h3>Katana</h3>
+                <div class="duration">3D Model</div>
+                <a href="#" class="btn">VIEW MORE</a>
+              </div>
+            </div>
+
+            <div class="card-slider"
+               data-description="A wandering freelance Trekker carrying her bedding and three katana. For some reason, she sees herself as a 'blade,' and is constantly sharpening herself in search of her 'wielder.'">  
+              <div class="model-wrapper">
+                <img src="Asset/Images/gctk.png" class="model-image" alt="Katana">
+              </div>
+              <div class="card-content">
+                <h3>Katana</h3>
+                <div class="duration">3D Model</div>
+                <a href="#" class="btn">VIEW MORE</a>
+              </div>
+            </div>
+
           </div>
         </div>
         <button class="nav-button nav-left" id="prev-weapons"></button>
@@ -146,13 +209,13 @@
       </div>
     </div>
 
-    <!-- EFFECTS -->
     <div class="slider-section category-content" data-category="efek">
       <div class="slider-wrapper-container">
         <div class="slider-outer">
           <div class="slider-wrapper" id="slider-wrapper-effects">
+
             <div class="card-slider"
-              data-description="Particle effect named 'Kanjut' – red spark trail for custom abilities.">
+               data-description="A wandering freelance Trekker carrying her bedding and three katana. For some reason, she sees herself as a 'blade,' and is constantly sharpening herself in search of her 'wielder.'">
               <div class="model-wrapper">
                 <img src="Asset/Images/vfx icon.gif" class="model-image" alt="Kanjut">
               </div>
@@ -162,6 +225,31 @@
                 <a href="#" class="btn">VIEW MORE</a>
               </div>
             </div>
+
+            <div class="card-slider"
+               data-description="A wandering freelance Trekker carrying her bedding and three katana. For some reason, she sees herself as a 'blade,' and is constantly sharpening herself in search of her 'wielder.'">
+              <div class="model-wrapper">
+                <img src="Asset/Images/vfx icon.gif" class="model-image" alt="Kanjut">
+              </div>
+              <div class="card-content">
+                <h3>Kanjut</h3>
+                <div class="duration">Particle Effect</div>
+                <a href="#" class="btn">VIEW MORE</a>
+              </div>
+            </div>
+
+            <div class="card-slider"
+               data-description="A wandering freelance Trekker carrying her bedding and three katana. For some reason, she sees herself as a 'blade,' and is constantly sharpening herself in search of her 'wielder.'">
+              <div class="model-wrapper">
+                <img src="Asset/Images/vfx icon.gif" class="model-image" alt="Kanjut">
+              </div>
+              <div class="card-content">
+                <h3>Kanjut</h3>
+                <div class="duration">Particle Effect</div>
+                <a href="#" class="btn">VIEW MORE</a>
+              </div>
+            </div>
+
           </div>
         </div>
         <button class="nav-button nav-left" id="prev-effects"></button>
@@ -169,7 +257,6 @@
       </div>
     </div>
 
-    <!-- Modal -->
     <div id="modelModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
@@ -188,7 +275,6 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
   <section id="community" class="community-section">
     <div class="community-content">
       <div class="community-image">
@@ -208,7 +294,6 @@
     </div>
   </section>
 
-  <!-- Footer -->
   <footer class="footer">
     <div class="footer-content">
       <p>© 2026 CatSwimming. All rights reserved.</p>
