Rename portfolio from CatSwimming to TheCats
Updated the portfolio from 'CatSwimming' to 'TheCats' and made minor content adjustments.

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CatSwimming Portfolio</title>
+  <title>TheCats_Portfolio</title>
   <link rel="shortcut icon" href="Asset/Images/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="Css/style.css" />
 </head>
 <body>
   <div class="header">
-    <h1>CatSwimming Portofolio</h1>
+    <h1>TheCats Portofolio</h1>
   </div>
 
   <div class="promo-banner">
     <div class="promo-content">
       <div class="promo-text">
         <span class="promo-subtitle">MINECRAFT MODEL MAKER</span>
-        <h2>CatSwimming</h2>
+        <h2>TheCats</h2>
         <p>Hello Everyone, I'm a 3D modeler and animator.</p>
         <div class="promo-buttons">
           <a href="#category-selector" class="btn btn-primary">Browse Models</a>
@@ -296,7 +296,7 @@
 
   <footer class="footer">
     <div class="footer-content">
-      <p>© 2026 CatSwimming. All rights reserved.</p>
+      <p>© 2026 TheCats. All rights reserved.</p>
       <div class="footer-links">
         <a href="https://www.artstation.com/samirbisnis9" target="_blank">ArtStation</a>
         <a href="https://www.fiverr.com/catswimming" target="_blank">Fiverr</a>
