Restore index.html to original state
Restored the original index.html file structure and content.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="promo-text">
         <span class="promo-subtitle">MINECRAFT MODEL MAKER</span>
         <h2>TheCats</h2>
-        <p>Hello Everyone, I'm a 3D modeler and animator.</p>
+        <p>Hello Everyone, I'm a 3D modeler Minecraft.</p>
         <div class="promo-buttons">
           <a href="#category-selector" class="btn btn-primary">Browse Models</a>
           <a href="#community" class="btn btn-outline">Contact Me</a>
@@ -309,3 +309,4 @@
   <script src="Js/script.js"></script>
 </body>
 </html>
+
