Revise portfolio content and correct typos
Updated portfolio content and fixed minor typos.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="promo-text">
         <span class="promo-subtitle">MINECRAFT MODEL MAKER</span>
         <h2>TheCats</h2>
-        <p>Hello Everyone, I'm a 3D modeler Minecraft.</p>
+        <p>Hello Everyone, I'm a 3D modeler and animator.</p>
         <div class="promo-buttons">
           <a href="#category-selector" class="btn btn-primary">Browse Models</a>
           <a href="#community" class="btn btn-outline">Contact Me</a>
@@ -276,23 +276,23 @@
   </section>
 
   <section id="community" class="community-section">
-    <div class="community-content">
-      <div class="community-image">
-        <img src="Asset/Images/icon-duo.png" alt="Contact Illustration">
-      </div>
-      <div class="community-text">
-        <h2>Get in Touch</h2>
-        <p>
-          Interested in collaborating or commissioning a custom 3D model? Feel free to reach out via email or my Fiverr
-          profile. Let's bring your Minecraft ideas to life together!
-        </p>
-        <div class="community-buttons">
-          <a href="mailto:you@example.com" class="btn btn-primary">Contact Me</a>
-          <a href="https://www.fiverr.com/catswimming" target="_blank" class="btn btn-outline">Fiverr Profile</a>
-        </div>
+  <div class="community-content">
+    <div class="community-image">
+      <img src="Asset/Images/icon-duo.png" alt="Contact Illustration">
+    </div>
+    <div class="community-text">
+      <h2>Get in Touch</h2>
+      <p>
+        Interested in collaborating or commissioning a custom 3D model? Feel free to reach out via email or my Fiverr
+        profile. Let's bring your Minecraft ideas to life together!
+      </p>
+      <div class="community-buttons">
+        <a href="mailto:you@example.com" class="btn btn-primary">Contact Me</a>
+        <a href="https://www.fiverr.com/catswimming  " target="_blank" class="btn btn-outline">Fiverr Profile</a>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <footer class="footer">
     <div class="footer-content">
@@ -309,4 +309,3 @@
   <script src="Js/script.js"></script>
 </body>
 </html>
-
